--- a/portfolio/myportfolio/templates/myportfolio/about.html
+++ b/portfolio/myportfolio/templates/myportfolio/about.html
@@ -1,4 +1,19 @@
 {% extends 'base.html' %}
 {% block content %}
+<title>About</title>
+<h1 class="text-center">About me</h1>
 
+<p>
+    I'm a computer science student at the University of Guelph with a strong passion for full-stack 
+    development, particularly enjoying back-end work. My academic journey has equipped me with a solid 
+    foundation in algorithms, data structures, and software engineering principles. I've worked on several 
+    projects, including developing web applications using technologies like React, Node.js, and HTML/CSS. 
+    Currently, I’m working on an exciting game project using Java, which has allowed me to deepen my 
+    understanding of object-oriented programming and game design.
+    Outside of academics and coding, I'm an avid tennis player and enjoy other racket sports as well, which 
+    keep me active and disciplined. I also love watching anime, which has sparked my interest in Japanese 
+    culture and led me to start learning the language.
+    I'm open to Job opportunities where I can contribute, learn and grow. If you have a good opportunity 
+    that matches my skills and experience then don't hesitate to contact me.
+</p>
 {% endblock %}
