--- a/portfolio/theme/templates/base.html
+++ b/portfolio/theme/templates/base.html
@@ -2,23 +2,47 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-    	<title>Quoc Le</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		{% tailwind_css %}
+		<script>
+			// Immediately apply the theme to avoid flickering
+			(function() {
+				const currentTheme = localStorage.getItem('theme');
+				if (currentTheme) {
+					document.documentElement.classList.add(currentTheme);
+				}
+			})();
+		</script>
+	
 		<script src="{% static 'js/main.js' %}" defer></script>
 	</head>
 
-	<body>
-		<div>
-			<nav>
-				<a href="{% url 'home' %}">Home</a>
-				<a href="{% url 'about' %}">About</a>
-				<a href="{% url 'projects' %}">Projects</a>
-				<a href="{% url 'stats' %}">Stats</a>
-				<a href="{% url 'contact' %}">Contact</a>
-			</nav>
+	<body class="transition-colors duration-500 bg-white dark:bg-gray-900 text-black dark:text-white">
+		<div class="bg-gray-800 p-4">
+			<div class="container mx-auto flex justify-between items-center">
+				<nav class="flex">
+					<a href="{% url 'home' %}" class="text-white px-4 py-2">Quoc Le</a>
+					<a href="{% url 'about' %}" class="text-white px-4 py-2">About</a>
+					<a href="{% url 'projects' %}" class="text-white px-4 py-2">Projects</a>
+					<a href="{% url 'stats' %}" class="text-white px-4 py-2">Stats</a>
+					<a href="{% url 'contact' %}" class="text-white px-4 py-2">Contact</a>
+				</nav>
+				<div class="flex items-center">
+					<button id="theme-toggle" class="text-white px-4 py-2">
+						<span id="light-mode-icon" class="hidden">
+							<ion-icon name="sunny-outline"></ion-icon>
+						</span>
+						<span id="dark-mode-icon">
+							<ion-icon name="moon-outline"></ion-icon>
+						</span>
+					</button>
+				</div>
+			</div>
 		</div>
+		<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+		<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+		{% block content %}{% endblock %}
 	</body>
 </html>
