--- a/portfolio/theme/templates/base.html
+++ b/portfolio/theme/templates/base.html
@@ -30,7 +30,19 @@
 					<a href="{% url 'contact' %}" class="text-white px-4 py-2">Contact</a>
 				</nav>
 				<div class="flex items-center">
-					<button id="theme-toggle" class="text-white px-4 py-2">
+					<a href="www.linkedin.com/in/quoc-van-tilburg-le-293333294" class="text-white px-4 py-2">
+						<ion-icon name="logo-linkedin"></ion-icon>
+					</a>
+					<a href="https://github.com/Quoctynoob" class="text-white px-4 py-2">
+						<ion-icon name="logo-github"></ion-icon>
+					</a>
+					<a href="https://www.instagram.com/tilburgquoc/" class="text-white px-4 py-2">
+						<ion-icon name="logo-instagram"></ion-icon>
+					</a>
+					<a href="mailto:tilburgquoc34@gmail.com" class="text-white px-4 py-2">
+						<ion-icon name="at-outline"></ion-icon>
+					</a>
+					<button id="theme-toggle" class="text-white px-3 py-2">
 						<span id="light-mode-icon" class="hidden">
 							<ion-icon name="sunny-outline"></ion-icon>
 						</span>
