--- a/portfolio/myportfolio/templates/myportfolio/about.html
+++ b/portfolio/myportfolio/templates/myportfolio/about.html
@@ -1,19 +1,75 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
 <title>About</title>
 <h1 class="text-center">About me</h1>
 
-<p>
-    I'm a computer science student at the University of Guelph with a strong passion for full-stack 
-    development, particularly enjoying back-end work. My academic journey has equipped me with a solid 
-    foundation in algorithms, data structures, and software engineering principles. I've worked on several 
-    projects, including developing web applications using technologies like React, Node.js, and HTML/CSS. 
-    Currently, I’m working on an exciting game project using Java, which has allowed me to deepen my 
-    understanding of object-oriented programming and game design.
-    Outside of academics and coding, I'm an avid tennis player and enjoy other racket sports as well, which 
-    keep me active and disciplined. I also love watching anime, which has sparked my interest in Japanese 
-    culture and led me to start learning the language.
-    I'm open to Job opportunities where I can contribute, learn and grow. If you have a good opportunity 
-    that matches my skills and experience then don't hesitate to contact me.
-</p>
+<div class=" ml-56 mr-56 space-y-8 md:space-y-0 md:space-x-8 rtl:space-x-reverse md:flex md:items-center">
+    <img src="{% static 'images/quoc.JPG' %}" alt="My Profile" class="w-96 h-auto rounded-full">
+    <p class="w-full">
+        I'm a computer science student at the University of Guelph with a strong passion for full-stack 
+        development, particularly enjoying back-end work. My academic journey has equipped me with a solid 
+        foundation in algorithms, data structures, and software engineering principles. I've worked on several 
+        projects, including developing web applications using technologies like React, Node.js, and HTML/CSS. 
+        Currently, I’m working on an exciting game project using Java, which has allowed me to deepen my 
+        understanding of object-oriented programming and game design.
+        Outside of academics and coding, I'm an avid tennis player and enjoy other racket sports as well, which 
+        keep me active and disciplined. I also love watching anime, which has sparked my interest in Japanese 
+        culture and led me to start learning the language.
+        I'm open to Job opportunities where I can contribute, learn and grow. If you have a good opportunity 
+        that matches my skills and experience then don't hesitate to contact me.
+    </p>
+</div>
+<div class="space-y-5">
+    <!-- Progress -->
+    <div>
+      <div class="mb-2 flex justify-between items-center">
+        <h3 class="text-sm font-semibold text-gray-800 dark:text-white">Progress title</h3>
+        <span class="text-sm text-gray-800 dark:text-white">25%</span>
+      </div>
+      <div class="flex w-full h-2 bg-gray-200 rounded-full overflow-hidden dark:bg-neutral-700" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+        <div class="flex flex-col justify-center rounded-full overflow-hidden bg-blue-600 text-xs text-white text-center whitespace-nowrap transition duration-500 dark:bg-blue-500" style="width: 25%"></div>
+      </div>
+    </div>
+    <!-- End Progress -->
+  
+    <!-- Progress -->
+    <div>
+      <div class="mb-2 flex justify-between items-center">
+        <h3 class="text-sm font-semibold text-gray-800 dark:text-white">Progress title</h3>
+        <span class="text-sm text-gray-800 dark:text-white">50%</span>
+      </div>
+      <div class="flex w-full h-2 bg-gray-200 rounded-full overflow-hidden dark:bg-neutral-700" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+        <div class="flex flex-col justify-center rounded-full overflow-hidden bg-blue-600 text-xs text-white text-center whitespace-nowrap transition duration-500 dark:bg-blue-500" style="width: 50%"></div>
+      </div>
+    </div>
+    <!-- End Progress -->
+  
+    <!-- Progress -->
+    <div>
+      <div class="mb-2 flex justify-between items-center">
+        <h3 class="text-sm font-semibold text-gray-800 dark:text-white">Progress title</h3>
+        <span class="text-sm text-gray-800 dark:text-white">75%</span>
+      </div>
+      <div class="flex w-full h-2 bg-gray-200 rounded-full overflow-hidden dark:bg-neutral-700" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+        <div class="flex flex-col justify-center rounded-full overflow-hidden bg-blue-600 text-xs text-white text-center whitespace-nowrap transition duration-500 dark:bg-blue-500" style="width: 75%"></div>
+      </div>
+    </div>
+    <!-- End Progress -->
+  
+    <!-- Progress -->
+    <div>
+      <div class="mb-2 flex justify-between items-center">
+        <h3 class="text-sm font-semibold text-gray-800 dark:text-white">Progress title</h3>
+        <span class="text-sm text-gray-800 dark:text-white">100%</span>
+      </div>
+      <div class="flex w-full h-2 bg-gray-200 rounded-full overflow-hidden dark:bg-neutral-700" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+        <div class="flex flex-col justify-center rounded-full overflow-hidden bg-blue-600 text-xs text-white text-center whitespace-nowrap transition duration-500 dark:bg-blue-500" style="width: 100%"></div>
+      </div>
+    </div>
+    <!-- End Progress -->
+  </div>
+  <div>
+    <button></button>
+  </div>
 {% endblock %}
