--- a/portfolio/myportfolio/templates/myportfolio/about.html
+++ b/portfolio/myportfolio/templates/myportfolio/about.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<title>About</title>
-<h1 class="text-center">About me</h1>
+<div class="ml-56 mr-56">
+  <title>About</title>
+  <h1 class="text-center"><b>About Me</b></h1>
 
-<div class=" ml-56 mr-56 space-y-8 md:space-y-0 md:space-x-8 rtl:space-x-reverse md:flex md:items-center">
+  <div class="space-y-8 md:space-y-0 md:space-x-8 rtl:space-x-reverse md:flex md:items-center">
     <img src="{% static 'images/quoc.JPG' %}" alt="My Profile" class="w-96 h-auto rounded-full">
     <p class="w-full">
         I'm a computer science student at the University of Guelph with a strong passion for full-stack 
@@ -19,8 +20,25 @@
         I'm open to Job opportunities where I can contribute, learn and grow. If you have a good opportunity 
         that matches my skills and experience then don't hesitate to contact me.
     </p>
-</div>
-<div class="space-y-5">
+  </div>
+
+
+  <h1 class="text-center"><b>Education</b></h1>
+
+  <div>
+    <h4>Bachelor of Computing in Computer Science (Co-op), Minor in Geomatics</h4>
+    <a href="https://www.uoguelph.ca/">University of Guelph</a>
+  </div>
+
+  <h1 class="text-center"><b>Stats</b></h1>
+
+  <div>
+    <p><b>Insert stats here</b></p>
+  </div>
+
+  <h1 class="text-center"><b>Skills</b></h1>
+
+  <div class="space-y-5">
     <!-- Progress -->
     <div>
       <div class="mb-2 flex justify-between items-center">
@@ -69,7 +87,10 @@
     </div>
     <!-- End Progress -->
   </div>
+
+
   <div>
-    <button></button>
+    <button type="button" class="text-gray-900 bg-gradient-to-r from-teal-200 to-lime-200 hover:bg-gradient-to-l hover:from-teal-200 hover:to-lime-200 focus:ring-4 focus:outline-none focus:ring-lime-200 dark:focus:ring-teal-700 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2">Teal to Lime</button>
   </div>
+</div>
 {% endblock %}
