--- a/portfolio/myportfolio/templates/myportfolio/index.html
+++ b/portfolio/myportfolio/templates/myportfolio/index.html
@@ -11,7 +11,11 @@
                 });
             </script>
             <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl dark:text-white">Quoc Le.</h1>
-            <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 lg:px-48 dark:text-gray-400">Welcome to my page, feel free to read more <a href="{% url 'about' %}">about me</a>, check out my ongoing and past <a href="{% url 'projects' %}">projects</a>, or <a href="{% url 'contact' %}">contact me</a>.</p>
+            <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 lg:px-48 dark:text-gray-400">
+                Welcome to my page, feel free to read more <a href="{% url 'about' %}">about me</a>
+                , check out my ongoing and past <a href="{% url 'projects' %}">projects</a>
+                , or <a href="{% url 'contact' %}">contact me</a>.
+            </p>
             <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0">
             </div>
         </div>
