--- a/portfolio/myportfolio/templates/myportfolio/about.html
+++ b/portfolio/myportfolio/templates/myportfolio/about.html
@@ -5,6 +5,7 @@
   <title>About</title>
   <h1 class="text-center"><b>About Me</b></h1>
 
+  <!--about me paragraph-->
   <div class="space-y-8 md:space-y-0 md:space-x-8 rtl:space-x-reverse md:flex md:items-center">
     <img src="{% static 'images/quoc.JPG' %}" alt="My Profile" class="w-96 h-auto rounded-full">
     <p class="w-full">
@@ -12,7 +13,7 @@
         development, particularly enjoying back-end work. My academic journey has equipped me with a solid 
         foundation in algorithms, data structures, and software engineering principles. I've worked on several 
         projects, including developing web applications using technologies like React, Node.js, and HTML/CSS. 
-        Currently, I’m working on an exciting game project using Java, which has allowed me to deepen my 
+        Currently, I'm working on an exciting game project using Java, which has allowed me to deepen my 
         understanding of object-oriented programming and game design.
         Outside of academics and coding, I'm an avid tennis player and enjoy other racket sports as well, which 
         keep me active and disciplined. I also love watching anime, which has sparked my interest in Japanese 
@@ -21,76 +22,74 @@
         that matches my skills and experience then don't hesitate to contact me.
     </p>
   </div>
+  <!--until here-->
 
-
+  
+  <!--Education Section-->
   <h1 class="text-center"><b>Education</b></h1>
 
   <div>
     <h4>Bachelor of Computing in Computer Science (Co-op), Minor in Geomatics</h4>
-    <a href="https://www.uoguelph.ca/">University of Guelph</a>
+    <a href="https://www.uoguelph.ca/" class="underline decoration-indigo-500">University of Guelph</a>
   </div>
+  <!--until here-->
 
+
+  <!--Stats Section-->
   <h1 class="text-center"><b>Stats</b></h1>
 
   <div>
     <p><b>Insert stats here</b></p>
+    <h1>
+      My Age is: <p id="age">Calculating...</p>
+    </h1>
+    <p>Years of Experience: 2+ Years</p>
+    <p></p>
   </div>
+  <!--Until here-->
 
-  <h1 class="text-center"><b>Skills</b></h1>
 
-  <div class="space-y-5">
-    <!-- Progress -->
-    <div>
-      <div class="mb-2 flex justify-between items-center">
-        <h3 class="text-sm font-semibold text-gray-800 dark:text-white">Progress title</h3>
-        <span class="text-sm text-gray-800 dark:text-white">25%</span>
+  <!--Skills Section-->
+  <h1 class="text-center"><b>Skills</b></h1> 
+    
+  <div class="text-gray-100 bg-gray-900 place-content-center">
+
+    <section x-data="skillDisplay" class="p-6 space-y-6 bg-gray-900 rounded-xl md:grid md:grid-cols-2 md:gap-4 sm:space-y-0">
+      <div class="grid grid-cols-2 gap-6">
+        <template x-for="skill in skills">
+          <button x-text="skill.title"
+            class="px-4 py-2 text-xl text-gray-100 transition bg-blue-600 rounded-md h-14 w-44 hover:bg-blue-700"
+            :class="(currentSkill.title == skill.title) && 'font-bold ring-2 ring-gray-100'"
+            @click="currentSkill = skill">
+          </button>
+        </template>
       </div>
-      <div class="flex w-full h-2 bg-gray-200 rounded-full overflow-hidden dark:bg-neutral-700" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-        <div class="flex flex-col justify-center rounded-full overflow-hidden bg-blue-600 text-xs text-white text-center whitespace-nowrap transition duration-500 dark:bg-blue-500" style="width: 25%"></div>
-      </div>
+
+      <div class="flex items-center justify-center" x-data="{ circumference: 2 * 22 / 7 * 120 }">
+        <svg class="transform -rotate-90 w-72 h-72">
+          <circle cx="145" cy="145" r="120" stroke="currentColor" stroke-width="30" fill="transparent"
+              class="text-gray-700" />
+
+          <circle cx="145" cy="145" r="120" stroke="currentColor" stroke-width="30" fill="transparent"
+              :stroke-dasharray="circumference"
+              :stroke-dashoffset="circumference - currentSkill.percent / 100 * circumference"
+              class="text-blue-500 " />
+        </svg>
+        <span class="absolute text-5xl" x-text="`${currentSkill.percent}%`"></span>
     </div>
-    <!-- End Progress -->
-  
-    <!-- Progress -->
-    <div>
-      <div class="mb-2 flex justify-between items-center">
-        <h3 class="text-sm font-semibold text-gray-800 dark:text-white">Progress title</h3>
-        <span class="text-sm text-gray-800 dark:text-white">50%</span>
-      </div>
-      <div class="flex w-full h-2 bg-gray-200 rounded-full overflow-hidden dark:bg-neutral-700" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-        <div class="flex flex-col justify-center rounded-full overflow-hidden bg-blue-600 text-xs text-white text-center whitespace-nowrap transition duration-500 dark:bg-blue-500" style="width: 50%"></div>
-      </div>
-    </div>
-    <!-- End Progress -->
-  
-    <!-- Progress -->
-    <div>
-      <div class="mb-2 flex justify-between items-center">
-        <h3 class="text-sm font-semibold text-gray-800 dark:text-white">Progress title</h3>
-        <span class="text-sm text-gray-800 dark:text-white">75%</span>
-      </div>
-      <div class="flex w-full h-2 bg-gray-200 rounded-full overflow-hidden dark:bg-neutral-700" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-        <div class="flex flex-col justify-center rounded-full overflow-hidden bg-blue-600 text-xs text-white text-center whitespace-nowrap transition duration-500 dark:bg-blue-500" style="width: 75%"></div>
-      </div>
-    </div>
-    <!-- End Progress -->
-  
-    <!-- Progress -->
-    <div>
-      <div class="mb-2 flex justify-between items-center">
-        <h3 class="text-sm font-semibold text-gray-800 dark:text-white">Progress title</h3>
-        <span class="text-sm text-gray-800 dark:text-white">100%</span>
-      </div>
-      <div class="flex w-full h-2 bg-gray-200 rounded-full overflow-hidden dark:bg-neutral-700" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-        <div class="flex flex-col justify-center rounded-full overflow-hidden bg-blue-600 text-xs text-white text-center whitespace-nowrap transition duration-500 dark:bg-blue-500" style="width: 100%"></div>
-      </div>
-    </div>
-    <!-- End Progress -->
+    </section>
   </div>
+  <!--Until here-->
 
-
-  <div>
-    <button type="button" class="text-gray-900 bg-gradient-to-r from-teal-200 to-lime-200 hover:bg-gradient-to-l hover:from-teal-200 hover:to-lime-200 focus:ring-4 focus:outline-none focus:ring-lime-200 dark:focus:ring-teal-700 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2">Teal to Lime</button>
+  <!--Download Resume button-->
+  <div class="py-5">
+    <button class="relative inline-flex items-center justify-center p-0.5 mb-2 me-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-green-400 to-blue-600 group-hover:from-green-400 group-hover:to-blue-600 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800" 
+  type="submit">
+      <span class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
+          Download Resume
+      </span>
+  </button>
   </div>
+  <!--Until Here-->
 </div>
 {% endblock %}
